@@ -23,7 +23,6 @@ void luaU_dump (lua_State* L, const Proto* Main, lua_Chunkwriter w, void* data);
 void luaU_print (const Proto* Main);
 
 /* definitions for headers of binary files */
-#define	LUA_SIGNATURE	"\033Lua"	/* binary files start with "<esc>Lua" */
 #define	VERSION		0x50		/* last format change was in 5.0 */
 #define	VERSION0	0x50		/* last major  change was in 5.0 */
 
