@@ -7,6 +7,8 @@ This is Lua 5.0 FAF version.
   + new keyword `continue'
   + new inequality operator: !=
   + new single line comment: # ...
+  Implementation:
+  + skip BOM and unix style # comments when reading files
 
 * Changes from version 4.0 to 5.0
   -------------------------------
